# aipp101-starter

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: AtlasWithFormat.cmake  CompileOptions.cmake  Setup.cmake  ThirdParty.cmake
docker/: Dockerfile
docs/: atlas-for-ai-assistants.md  lab0-explore-tokens-and-prompts.md  lab1-talk-to-the-model.md  lab2-temperature-and-agents.md  lab3-poor-mans-tool-calling.md  lab5-agent-loop.md  workshop-agent-loop.md
scripts/: hw-cache-line-size  verify-all.sh
src/: CMakeLists.txt
src/wjh/apps/: CMakeLists.txt
src/wjh/apps/chat/: CMakeLists.txt  main.cpp
src/wjh/chat/: CMakeLists.txt  ChatLoop.cpp  ChatLoop.hpp  CommandLine.cpp  CommandLine.hpp  Config.cpp  Config.hpp  Result.hpp  TokenUsage.hpp  json_convert.hpp  stdfmt.hpp  types.atlas  types.hpp  types_gen.hpp
src/wjh/chat/client/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  IClient.cpp  IClient.hpp  OpenRouterClient.cpp  OpenRouterClient.hpp  types.atlas  types.hpp  types_gen.hpp
src/wjh/chat/conversation/: CMakeLists.txt  Conversation.cpp  Conversation.hpp  Message.cpp  Message.hpp  types.atlas  types.hpp  types_gen.hpp
src/wjh/chat/tests/: CMakeLists.txt  ChatLoop_ut.cpp  CommandLine_ut.cpp  Config_ut.cpp  Conversation_ut.cpp  Message_ut.cpp  OpenRouterClient_ut.cpp  Result_ut.cpp  main.cpp
src/wjh/testing/: CMakeLists.txt  MockClient.cpp  MockClient.hpp  doctest.hpp
